<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:layout_margin="10dp"
        android:orientation="horizontal">

        <CheckBox
	        android:id="@+id/movimento_credito"
	        android:layout_width="0dp" 
	        android:layout_height="fill_parent"
	        android:layout_weight="0.75"
	        android:text="@string/credito"/>
        
	    <EditText 
	       	android:id="@+id/movimento_valor"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1.25"
	       	android:hint="@string/valor"
	       	android:inputType="numberDecimal"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:layout_margin="10dp"
        android:orientation="horizontal">
    
	    <EditText
	        android:id="@+id/movimento_data"
			android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:focusable="false"
			android:clickable="true"
			android:layout_gravity="center"
			android:hint="@string/dia"
			android:inputType="date"/>
	
	    <EditText
	        android:id="@+id/movimento_time"
			android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:focusable="false"
			android:clickable="true"
			android:layout_gravity="center"
			android:hint="@string/hora"
			android:inputType="time"/>
    </LinearLayout>
    
    <EditText
	        android:id="@+id/movimento_empresa"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_margin="10dp"
			android:focusable="false"
			android:clickable="true"
			android:inputType="none"
			android:hint="@string/empresa"/>
    
    <TextView
       	android:id="@+id/sms_body"
           android:layout_height="wrap_content"
           android:layout_width="fill_parent"/>
    
</LinearLayout>
