<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:layout_margin="10dp"
        android:orientation="horizontal">
		
        <EditText
	        android:id="@+id/movimento_item_estabelecimento"
			android:layout_height="wrap_content"
			android:layout_width="0dip"
			android:layout_weight="1"
			android:focusable="false"
			android:clickable="true"
			android:inputType="none"
			android:hint="@string/estabelecimento"/>
        
	    <EditText 
	       	android:id="@+id/movimento_item_valor"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
	       	android:hint="@string/valor"
	       	android:inputType="numberDecimal"/>
    
    </LinearLayout>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/dia"/>
    <EditText
        android:id="@+id/movimento_item_data"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:focusable="false"
		android:clickable="true"
		android:layout_gravity="center"
		android:layout_margin="10dp"
		android:inputType="date"/>

    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/hora"/>
    <EditText
        android:id="@+id/movimento_item_time"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:focusable="false"
		android:clickable="true"
		android:layout_gravity="center"
		android:layout_margin="10dp"
		android:inputType="time"/>

    <EditText
        android:id="@+id/movimento_item_produto"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:focusable="false"
		android:clickable="true"
		android:layout_gravity="center"
		android:layout_margin="10dp"
		android:inputType="none"
        android:hint="@string/produto"/>
</LinearLayout>