<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:layout_margin="10dp"
   android:orientation="vertical" >
    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="6dp"
	    android:orientation="horizontal">
			
	   <TextView
			    android:id="@+id/movimento_empresa"
				android:layout_height="wrap_content"
				android:layout_width="0dip"
				android:layout_weight="1"
				android:focusable="false"
				android:hint="@string/empresa"
				android:textStyle="bold"
		        android:textSize="20sp"
		        android:textColor="@android:color/holo_green_dark"/>
	      
	   <TextView 
	      	  android:id="@+id/movimento_valor"
	          android:layout_height="wrap_content"
	          android:layout_width="0dp"
	          android:layout_weight="1"
	          android:focusable="false"
		      android:hint="@string/valor"
		      android:textStyle="bold"
	          android:textSize="20sp"
	          android:textColor="@android:color/holo_red_dark"/>
	</LinearLayout>
	
   <TextView
	    android:id="@+id/movimento_data"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:focusable="false"
		android:hint="@string/data"
		android:layout_margin="6dp"
		android:textSize="14sp"
	    android:textStyle="italic"
	    android:textColor="@android:color/darker_gray"/>
</LinearLayout>