<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="80dp"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/periodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        	android:layout_height="wrap_content"
        	android:layout_width="match_parent"
        	android:orientation="horizontal"
        	android:baselineAligned="false">
        	
        <LinearLayout 
        	android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
        	android:orientation="vertical">
        	<TextView
	        	android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/credito"
	            android:textSize="14sp" />
	        <TextView
	            android:id="@+id/valor_credito"
	        	android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textSize="14sp" />
        </LinearLayout>
        
        <LinearLayout 
        	android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
        	android:orientation="vertical">
        	<TextView
	        	android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/debito"
	            android:textSize="14sp"
	            android:gravity="center" />
	        <TextView
	            android:id="@+id/valor_debito"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textSize="14sp"
	            android:gravity="center" />
        </LinearLayout>
        
        <LinearLayout 
        	android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
        	android:orientation="vertical">
        	<TextView
	        	android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/saldo"
	            android:textSize="14sp"
	            android:gravity="right" />
	        <TextView
	            android:id="@+id/saldo"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textSize="14sp"
	            android:gravity="right" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        	android:id="@+id/gastos_summary"
        	android:layout_height="wrap_content"
        	android:layout_width="match_parent"
        	android:orientation="vertical"/>
        

</LinearLayout>